A02/parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_decl
Rule 2     program -> <empty>
Rule 3     class_decl -> CLASS ID LBRACE class_body_decl RBRACE
Rule 4     class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE
Rule 5     class_decl -> CLASS ID LBRACE class_body_decl RBRACE class_decl
Rule 6     class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE class_decl
Rule 7     class_body_decl -> field_decl
Rule 8     class_body_decl -> method_decl
Rule 9     class_body_decl -> constructor_decl
Rule 10    class_body_decl -> field_decl class_body_decl
Rule 11    class_body_decl -> method_decl class_body_decl
Rule 12    class_body_decl -> constructor_decl class_body_decl
Rule 13    field_decl -> modifier var_decl
Rule 14    method_decl -> modifier type ID LPAREN formals RPAREN block
Rule 15    method_decl -> modifier type ID LPAREN RPAREN block
Rule 16    method_decl -> modifier VOID ID LPAREN formals RPAREN block
Rule 17    method_decl -> modifier VOID ID LPAREN RPAREN block
Rule 18    constructor_decl -> modifier ID LPAREN formals RPAREN block
Rule 19    constructor_decl -> modifier ID LPAREN RPAREN block
Rule 20    modifier -> PUBLIC STATIC
Rule 21    modifier -> PRIVATE STATIC
Rule 22    modifier -> PUBLIC
Rule 23    modifier -> PRIVATE
Rule 24    modifier -> STATIC
Rule 25    modifier -> <empty>
Rule 26    var_decl -> type variables SEMICOLON
Rule 27    type -> INT
Rule 28    type -> FLOAT
Rule 29    type -> BOOLEAN
Rule 30    type -> ID
Rule 31    variables -> variable
Rule 32    variables -> variable COMMA variables
Rule 33    variable -> ID
Rule 34    formals -> formal_param
Rule 35    formals -> formal_param COMMA formals
Rule 36    formal_param -> type variable
Rule 37    block -> LBRACE stmts RBRACE
Rule 38    stmts -> stmt
Rule 39    stmts -> stmt stmts
Rule 40    stmt -> IF LPAREN expr RPAREN stmt
Rule 41    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 42    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 43    stmt -> FOR LPAREN stmt_expr SEMICOLON expr SEMICOLON stmt_expr RPAREN stmt
Rule 44    stmt -> FOR LPAREN SEMICOLON SEMICOLON RPAREN stmt
Rule 45    stmt -> RETURN expr SEMICOLON
Rule 46    stmt -> RETURN SEMICOLON
Rule 47    stmt -> stmt_expr SEMICOLON
Rule 48    stmt -> BREAK SEMICOLON
Rule 49    stmt -> CONTINUE SEMICOLON
Rule 50    stmt -> block
Rule 51    stmt -> var_decl
Rule 52    stmt -> SEMICOLON
Rule 53    stmt_expr -> assign
Rule 54    stmt_expr -> method_invocation
Rule 55    expr -> primary
Rule 56    expr -> assign
Rule 57    expr -> expr arith_op expr
Rule 58    expr -> expr bool_op expr
Rule 59    expr -> unary_op expr
Rule 60    primary -> literal
Rule 61    primary -> THIS
Rule 62    primary -> SUPER
Rule 63    primary -> LPAREN expr RPAREN
Rule 64    primary -> NEW ID LPAREN arguments RPAREN
Rule 65    primary -> lhs
Rule 66    primary -> method_invocation
Rule 67    assign -> lhs EQUALS expr
Rule 68    assign -> lhs INCREMENT
Rule 69    assign -> INCREMENT lhs
Rule 70    assign -> lhs DECREMENT
Rule 71    assign -> DECREMENT lhs
Rule 72    lhs -> field_access
Rule 73    field_access -> primary DOT ID
Rule 74    field_access -> ID
Rule 75    arguments -> expr
Rule 76    arguments -> expr COMMA arguments
Rule 77    arguments -> <empty>
Rule 78    method_invocation -> field_access LPAREN arguments RPAREN
Rule 79    expr -> expr PLUS expr
Rule 80    expr -> expr MINUS expr
Rule 81    expr -> expr TIMES expr
Rule 82    expr -> expr DIVIDE expr
Rule 83    expr -> expr AND expr
Rule 84    expr -> expr OR expr
Rule 85    expr -> expr EQ expr
Rule 86    expr -> expr NE expr
Rule 87    expr -> expr LT expr
Rule 88    expr -> expr GT expr
Rule 89    expr -> expr LE expr
Rule 90    expr -> expr GE expr
Rule 91    expr -> PLUS expr
Rule 92    expr -> MINUS expr
Rule 93    expr -> NOT expr
Rule 94    literal -> INT_CONST
Rule 95    literal -> FLOAT_CONST
Rule 96    literal -> STRING_CONST
Rule 97    literal -> NULL
Rule 98    literal -> TRUE
Rule 99    literal -> FALSE
Rule 100   arith_op -> PLUS
Rule 101   arith_op -> MINUS
Rule 102   arith_op -> TIMES
Rule 103   arith_op -> DIVIDE
Rule 104   bool_op -> AND
Rule 105   bool_op -> OR
Rule 106   bool_op -> EQ
Rule 107   bool_op -> NE
Rule 108   bool_op -> LT
Rule 109   bool_op -> GT
Rule 110   bool_op -> LE
Rule 111   bool_op -> GE
Rule 112   unary_op -> PLUS
Rule 113   unary_op -> MINUS
Rule 114   unary_op -> NOT

Terminals, with rules where they appear

AND                  : 83 104
BOOLEAN              : 29
BREAK                : 48
CLASS                : 3 4 5 6
COMMA                : 32 35 76
CONTINUE             : 49
DECREMENT            : 70 71
DIVIDE               : 82 103
DOT                  : 73
ELSE                 : 41
EQ                   : 85 106
EQUALS               : 67
EXTENDS              : 4 6
FALSE                : 99
FLOAT                : 28
FLOAT_CONST          : 95
FOR                  : 43 44
GE                   : 90 111
GT                   : 88 109
ID                   : 3 4 4 5 6 6 14 15 16 17 18 19 30 33 64 73 74
IF                   : 40 41
INCREMENT            : 68 69
INT                  : 27
INT_CONST            : 94
LBRACE               : 3 4 5 6 37
LE                   : 89 110
LPAREN               : 14 15 16 17 18 19 40 41 42 43 44 63 64 78
LT                   : 87 108
MINUS                : 80 92 101 113
NE                   : 86 107
NEW                  : 64
NOT                  : 93 114
NULL                 : 97
OR                   : 84 105
PLUS                 : 79 91 100 112
PRIVATE              : 21 23
PUBLIC               : 20 22
RBRACE               : 3 4 5 6 37
RETURN               : 45 46
RPAREN               : 14 15 16 17 18 19 40 41 42 43 44 63 64 78
SEMICOLON            : 26 43 43 44 44 45 46 47 48 49 52
STATIC               : 20 21 24
STRING_CONST         : 96
SUPER                : 62
THIS                 : 61
TIMES                : 81 102
TRUE                 : 98
VOID                 : 16 17
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

arguments            : 64 76 78
arith_op             : 57
assign               : 53 56
block                : 14 15 16 17 18 19 50
bool_op              : 58
class_body_decl      : 3 4 5 6 10 11 12
class_decl           : 1 5 6
constructor_decl     : 9 12
expr                 : 40 41 42 43 45 57 57 58 58 59 63 67 75 76 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 92 93
field_access         : 72 78
field_decl           : 7 10
formal_param         : 34 35
formals              : 14 16 18 35
lhs                  : 65 67 68 69 70 71
literal              : 60
method_decl          : 8 11
method_invocation    : 54 66
modifier             : 13 14 15 16 17 18 19
primary              : 55 73
program              : 0
stmt                 : 38 39 40 41 41 42 43 44
stmt_expr            : 43 43 47
stmts                : 37 39
type                 : 14 15 26 36
unary_op             : 59
var_decl             : 13 51
variable             : 31 32 36
variables            : 26 32


state 0

    (0) S' -> . program
    (1) program -> . class_decl
    (2) program -> .
    (3) class_decl -> . CLASS ID LBRACE class_body_decl RBRACE
    (4) class_decl -> . CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE
    (5) class_decl -> . CLASS ID LBRACE class_body_decl RBRACE class_decl
    (6) class_decl -> . CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE class_decl

    $end            reduce using rule 2 (program -> .)
    CLASS           shift and go to state 3

    program                        shift and go to state 1
    class_decl                     shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> class_decl .

    $end            reduce using rule 1 (program -> class_decl .)


state 3

    (3) class_decl -> CLASS . ID LBRACE class_body_decl RBRACE
    (4) class_decl -> CLASS . ID EXTENDS ID LBRACE class_body_decl RBRACE
    (5) class_decl -> CLASS . ID LBRACE class_body_decl RBRACE class_decl
    (6) class_decl -> CLASS . ID EXTENDS ID LBRACE class_body_decl RBRACE class_decl

    ID              shift and go to state 4


state 4

    (3) class_decl -> CLASS ID . LBRACE class_body_decl RBRACE
    (4) class_decl -> CLASS ID . EXTENDS ID LBRACE class_body_decl RBRACE
    (5) class_decl -> CLASS ID . LBRACE class_body_decl RBRACE class_decl
    (6) class_decl -> CLASS ID . EXTENDS ID LBRACE class_body_decl RBRACE class_decl

    LBRACE          shift and go to state 5
    EXTENDS         shift and go to state 6


state 5

    (3) class_decl -> CLASS ID LBRACE . class_body_decl RBRACE
    (5) class_decl -> CLASS ID LBRACE . class_body_decl RBRACE class_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) class_body_decl -> . field_decl class_body_decl
    (11) class_body_decl -> . method_decl class_body_decl
    (12) class_body_decl -> . constructor_decl class_body_decl
    (13) field_decl -> . modifier var_decl
    (14) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (15) method_decl -> . modifier type ID LPAREN RPAREN block
    (16) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (17) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (18) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (19) constructor_decl -> . modifier ID LPAREN RPAREN block
    (20) modifier -> . PUBLIC STATIC
    (21) modifier -> . PRIVATE STATIC
    (22) modifier -> . PUBLIC
    (23) modifier -> . PRIVATE
    (24) modifier -> . STATIC
    (25) modifier -> .

    PUBLIC          shift and go to state 12
    PRIVATE         shift and go to state 14
    STATIC          shift and go to state 13
    VOID            reduce using rule 25 (modifier -> .)
    ID              reduce using rule 25 (modifier -> .)
    INT             reduce using rule 25 (modifier -> .)
    FLOAT           reduce using rule 25 (modifier -> .)
    BOOLEAN         reduce using rule 25 (modifier -> .)

    class_body_decl                shift and go to state 7
    field_decl                     shift and go to state 8
    method_decl                    shift and go to state 9
    constructor_decl               shift and go to state 10
    modifier                       shift and go to state 11

state 6

    (4) class_decl -> CLASS ID EXTENDS . ID LBRACE class_body_decl RBRACE
    (6) class_decl -> CLASS ID EXTENDS . ID LBRACE class_body_decl RBRACE class_decl

    ID              shift and go to state 15


state 7

    (3) class_decl -> CLASS ID LBRACE class_body_decl . RBRACE
    (5) class_decl -> CLASS ID LBRACE class_body_decl . RBRACE class_decl

    RBRACE          shift and go to state 16


state 8

    (7) class_body_decl -> field_decl .
    (10) class_body_decl -> field_decl . class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) class_body_decl -> . field_decl class_body_decl
    (11) class_body_decl -> . method_decl class_body_decl
    (12) class_body_decl -> . constructor_decl class_body_decl
    (13) field_decl -> . modifier var_decl
    (14) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (15) method_decl -> . modifier type ID LPAREN RPAREN block
    (16) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (17) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (18) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (19) constructor_decl -> . modifier ID LPAREN RPAREN block
    (20) modifier -> . PUBLIC STATIC
    (21) modifier -> . PRIVATE STATIC
    (22) modifier -> . PUBLIC
    (23) modifier -> . PRIVATE
    (24) modifier -> . STATIC
    (25) modifier -> .

    RBRACE          reduce using rule 7 (class_body_decl -> field_decl .)
    PUBLIC          shift and go to state 12
    PRIVATE         shift and go to state 14
    STATIC          shift and go to state 13
    VOID            reduce using rule 25 (modifier -> .)
    ID              reduce using rule 25 (modifier -> .)
    INT             reduce using rule 25 (modifier -> .)
    FLOAT           reduce using rule 25 (modifier -> .)
    BOOLEAN         reduce using rule 25 (modifier -> .)

    field_decl                     shift and go to state 8
    class_body_decl                shift and go to state 17
    method_decl                    shift and go to state 9
    constructor_decl               shift and go to state 10
    modifier                       shift and go to state 11

state 9

    (8) class_body_decl -> method_decl .
    (11) class_body_decl -> method_decl . class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) class_body_decl -> . field_decl class_body_decl
    (11) class_body_decl -> . method_decl class_body_decl
    (12) class_body_decl -> . constructor_decl class_body_decl
    (13) field_decl -> . modifier var_decl
    (14) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (15) method_decl -> . modifier type ID LPAREN RPAREN block
    (16) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (17) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (18) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (19) constructor_decl -> . modifier ID LPAREN RPAREN block
    (20) modifier -> . PUBLIC STATIC
    (21) modifier -> . PRIVATE STATIC
    (22) modifier -> . PUBLIC
    (23) modifier -> . PRIVATE
    (24) modifier -> . STATIC
    (25) modifier -> .

    RBRACE          reduce using rule 8 (class_body_decl -> method_decl .)
    PUBLIC          shift and go to state 12
    PRIVATE         shift and go to state 14
    STATIC          shift and go to state 13
    VOID            reduce using rule 25 (modifier -> .)
    ID              reduce using rule 25 (modifier -> .)
    INT             reduce using rule 25 (modifier -> .)
    FLOAT           reduce using rule 25 (modifier -> .)
    BOOLEAN         reduce using rule 25 (modifier -> .)

    method_decl                    shift and go to state 9
    class_body_decl                shift and go to state 18
    field_decl                     shift and go to state 8
    constructor_decl               shift and go to state 10
    modifier                       shift and go to state 11

state 10

    (9) class_body_decl -> constructor_decl .
    (12) class_body_decl -> constructor_decl . class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) class_body_decl -> . field_decl class_body_decl
    (11) class_body_decl -> . method_decl class_body_decl
    (12) class_body_decl -> . constructor_decl class_body_decl
    (13) field_decl -> . modifier var_decl
    (14) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (15) method_decl -> . modifier type ID LPAREN RPAREN block
    (16) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (17) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (18) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (19) constructor_decl -> . modifier ID LPAREN RPAREN block
    (20) modifier -> . PUBLIC STATIC
    (21) modifier -> . PRIVATE STATIC
    (22) modifier -> . PUBLIC
    (23) modifier -> . PRIVATE
    (24) modifier -> . STATIC
    (25) modifier -> .

    RBRACE          reduce using rule 9 (class_body_decl -> constructor_decl .)
    PUBLIC          shift and go to state 12
    PRIVATE         shift and go to state 14
    STATIC          shift and go to state 13
    VOID            reduce using rule 25 (modifier -> .)
    ID              reduce using rule 25 (modifier -> .)
    INT             reduce using rule 25 (modifier -> .)
    FLOAT           reduce using rule 25 (modifier -> .)
    BOOLEAN         reduce using rule 25 (modifier -> .)

    constructor_decl               shift and go to state 10
    class_body_decl                shift and go to state 19
    field_decl                     shift and go to state 8
    method_decl                    shift and go to state 9
    modifier                       shift and go to state 11

state 11

    (13) field_decl -> modifier . var_decl
    (14) method_decl -> modifier . type ID LPAREN formals RPAREN block
    (15) method_decl -> modifier . type ID LPAREN RPAREN block
    (16) method_decl -> modifier . VOID ID LPAREN formals RPAREN block
    (17) method_decl -> modifier . VOID ID LPAREN RPAREN block
    (18) constructor_decl -> modifier . ID LPAREN formals RPAREN block
    (19) constructor_decl -> modifier . ID LPAREN RPAREN block
    (26) var_decl -> . type variables SEMICOLON
    (27) type -> . INT
    (28) type -> . FLOAT
    (29) type -> . BOOLEAN
    (30) type -> . ID

    VOID            shift and go to state 23
    ID              shift and go to state 22
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26

    var_decl                       shift and go to state 20
    type                           shift and go to state 21

state 12

    (20) modifier -> PUBLIC . STATIC
    (22) modifier -> PUBLIC .

    STATIC          shift and go to state 27
    VOID            reduce using rule 22 (modifier -> PUBLIC .)
    ID              reduce using rule 22 (modifier -> PUBLIC .)
    INT             reduce using rule 22 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 22 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 22 (modifier -> PUBLIC .)


state 13

    (24) modifier -> STATIC .

    VOID            reduce using rule 24 (modifier -> STATIC .)
    ID              reduce using rule 24 (modifier -> STATIC .)
    INT             reduce using rule 24 (modifier -> STATIC .)
    FLOAT           reduce using rule 24 (modifier -> STATIC .)
    BOOLEAN         reduce using rule 24 (modifier -> STATIC .)


state 14

    (21) modifier -> PRIVATE . STATIC
    (23) modifier -> PRIVATE .

    STATIC          shift and go to state 28
    VOID            reduce using rule 23 (modifier -> PRIVATE .)
    ID              reduce using rule 23 (modifier -> PRIVATE .)
    INT             reduce using rule 23 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 23 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 23 (modifier -> PRIVATE .)


state 15

    (4) class_decl -> CLASS ID EXTENDS ID . LBRACE class_body_decl RBRACE
    (6) class_decl -> CLASS ID EXTENDS ID . LBRACE class_body_decl RBRACE class_decl

    LBRACE          shift and go to state 29


state 16

    (3) class_decl -> CLASS ID LBRACE class_body_decl RBRACE .
    (5) class_decl -> CLASS ID LBRACE class_body_decl RBRACE . class_decl
    (3) class_decl -> . CLASS ID LBRACE class_body_decl RBRACE
    (4) class_decl -> . CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE
    (5) class_decl -> . CLASS ID LBRACE class_body_decl RBRACE class_decl
    (6) class_decl -> . CLASS ID EXTENDS ID LBRACE class_body_decl RBRACE class_decl

    $end            reduce using rule 3 (class_decl -> CLASS ID LBRACE class_body_decl RBRACE .)
    CLASS           shift and go to state 3

    class_decl                     shift and go to state 30

state 17

    (10) class_body_decl -> field_decl class_body_decl .

    RBRACE          reduce using rule 10 (class_body_decl -> field_decl class_body_decl .)


state 18

    (11) class_body_decl -> method_decl class_body_decl .

    RBRACE          reduce using rule 11 (class_body_decl -> method_decl class_body_decl .)


state 19

    (12) class_body_decl -> constructor_decl class_body_decl .

    RBRACE          reduce using rule 12 (class_body_decl -> constructor_decl class_body_decl .)


state 20

    (13) field_decl -> modifier var_decl .

    PUBLIC          reduce using rule 13 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 13 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 13 (field_decl -> modifier var_decl .)
    VOID            reduce using rule 13 (field_decl -> modifier var_decl .)
    ID              reduce using rule 13 (field_decl -> modifier var_decl .)
    INT             reduce using rule 13 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 13 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 13 (field_decl -> modifier var_decl .)
    RBRACE          reduce using rule 13 (field_decl -> modifier var_decl .)


state 21

    (14) method_decl -> modifier type . ID LPAREN formals RPAREN block
    (15) method_decl -> modifier type . ID LPAREN RPAREN block
    (26) var_decl -> type . variables SEMICOLON
    (31) variables -> . variable
    (32) variables -> . variable COMMA variables
    (33) variable -> . ID

    ID              shift and go to state 31

    variables                      shift and go to state 32
    variable                       shift and go to state 33

state 22

    (18) constructor_decl -> modifier ID . LPAREN formals RPAREN block
    (19) constructor_decl -> modifier ID . LPAREN RPAREN block
    (30) type -> ID .

    LPAREN          shift and go to state 34
    ID              reduce using rule 30 (type -> ID .)


state 23

    (16) method_decl -> modifier VOID . ID LPAREN formals RPAREN block
    (17) method_decl -> modifier VOID . ID LPAREN RPAREN block

    ID              shift and go to state 35


state 24

    (27) type -> INT .

    ID              reduce using rule 27 (type -> INT .)


state 25

    (28) type -> FLOAT .

    ID              reduce using rule 28 (type -> FLOAT .)


state 26

    (29) type -> BOOLEAN .

    ID              reduce using rule 29 (type -> BOOLEAN .)


state 27

    (20) modifier -> PUBLIC STATIC .

    VOID            reduce using rule 20 (modifier -> PUBLIC STATIC .)
    ID              reduce using rule 20 (modifier -> PUBLIC STATIC .)
    INT             reduce using rule 20 (modifier -> PUBLIC STATIC .)
    FLOAT           reduce using rule 20 (modifier -> PUBLIC STATIC .)
    BOOLEAN         reduce using rule 20 (modifier -> PUBLIC STATIC .)


state 28

    (21) modifier -> PRIVATE STATIC .

    VOID            reduce using rule 21 (modifier -> PRIVATE STATIC .)
    ID              reduce using rule 21 (modifier -> PRIVATE STATIC .)
    INT             reduce using rule 21 (modifier -> PRIVATE STATIC .)
    FLOAT           reduce using rule 21 (modifier -> PRIVATE STATIC .)
    BOOLEAN         reduce using rule 21 (modifier -> PRIVATE STATIC .)


state 29

    (4) class_decl -> CLASS ID EXTENDS ID LBRACE . class_body_decl RBRACE
    (6) class_decl -> CLASS ID EXTENDS ID LBRACE . class_body_decl RBRACE class_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) class_body_decl -> . field_decl class_body_decl
    (11) class_body_decl -> . method_decl class_body_decl
    (12) class_body_decl -> . constructor_decl class_body_decl
    (13) field_decl -> . modifier var_decl
    (14) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (15) method_decl -> . modifier type ID LPAREN RPAREN block
    (16) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (17) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (18) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (19) constructor_decl -> . modifier ID LPAREN RPAREN block
    (20) modifier -> . PUBLIC STATIC
    (21) modifier -> . PRIVATE STATIC
    (22) modifier -> . PUBLIC
    (23) modifier -> . PRIVATE
    (24) modifier -> . STATIC
    (25) modifier -> .

    PUBLIC          shift and go to state 12
    PRIVATE         shift and go to state 14
    STATIC          shift and go to state 13
    VOID            reduce using rule 25 (modifier -> .)
    ID              reduce using rule 25 (modifier -> .)
    INT             reduce using rule 25 (modifier -> .)
    FLOAT           reduce using rule 25 (modifier -> .)
    BOOLEAN         reduce using rule 25 (modifier -> .)

    class_body_decl                shift and go to state 36
    field_decl                     shift and go to state 8
    method_decl                    shift and go to state 9
    constructor_decl               shift and go to state 10
    modifier                       shift and go to state 11

state 30

    (5) class_decl -> CLASS ID LBRACE class_body_decl RBRACE class_decl .

    $end            reduce using rule 5 (class_decl -> CLASS ID LBRACE class_body_decl RBRACE class_decl .)


state 31

    (14) method_decl -> modifier type ID . LPAREN formals RPAREN block
    (15) method_decl -> modifier type ID . LPAREN RPAREN block
    (33) variable -> ID .

    LPAREN          shift and go to state 37
    COMMA           reduce using rule 33 (variable -> ID .)
    SEMICOLON       reduce using rule 33 (variable -> ID .)


state 32

    (26) var_decl -> type variables . SEMICOLON

    SEMICOLON       shift and go to state 38


state 33

    (31) variables -> variable .
    (32) variables -> variable . COMMA variables

    SEMICOLON       reduce using rule 31 (variables -> variable .)
    COMMA           shift and go to state 39


state 34

    (18) constructor_decl -> modifier ID LPAREN . formals RPAREN block
    (19) constructor_decl -> modifier ID LPAREN . RPAREN block
    (34) formals -> . formal_param
    (35) formals -> . formal_param COMMA formals
    (36) formal_param -> . type variable
    (27) type -> . INT
    (28) type -> . FLOAT
    (29) type -> . BOOLEAN
    (30) type -> . ID

    RPAREN          shift and go to state 42
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    ID              shift and go to state 40

    formals                        shift and go to state 41
    formal_param                   shift and go to state 43
    type                           shift and go to state 44

state 35

    (16) method_decl -> modifier VOID ID . LPAREN formals RPAREN block
    (17) method_decl -> modifier VOID ID . LPAREN RPAREN block

    LPAREN          shift and go to state 45


state 36

    (4) class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decl . RBRACE
    (6) class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decl . RBRACE class_decl

    RBRACE          shift and go to state 46


state 37

    (14) method_decl -> modifier type ID LPAREN . formals RPAREN block
    (15) method_decl -> modifier type ID LPAREN . RPAREN block
    (34) formals -> . formal_param
    (35) formals -> . formal_param COMMA formals
    (36) formal_param -> . type variable
    (27) type -> . INT
    (28) type -> . FLOAT
    (29) type -> . BOOLEAN
    (30) type -> . ID

    RPAREN          shift and go to state 48
    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    BOOLEAN         shift and go to state 26
    ID              shift and go to state 40

    type                           shift and go to state 44
    formals                        shift and go to state 47
    formal_param                   shift and go to state 43

state 38

    (26) var_decl -> type variables SEMICOLON .
